--- a/public/app/design/frontend/Magebit/learning/Magento_Catalog/layout/catalog_product_view_type_simple.xml
+++ b/public/app/design/frontend/Magebit/learning/Magento_Catalog/layout/catalog_product_view_type_simple.xml
@@ -5,11 +5,42 @@
  * See COPYING.txt for license details.
  */
 -->
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="product.info.type">
-            <block class="Magento\Catalog\Block\Product\View\Type\Simple" name="product.info.simple" as="product_type_data" template="Magento_Catalog::product/view/type/default.phtml"/>
-            <container name="product.info.simple.extra" after="product.info.simple" as="product_type_data_extra" label="Product Extra Info"/>
-        </referenceContainer>
+        <attribute name="class" value="magebit-product-simple-view"/>
+
+        <referenceBlock name="product.info.addtocart"
+                        template="Magento_Catalog::product/view/addtocartsimpletype.phtml">
+            <arguments>
+                <argument name="view_model" xsi:type="object">\Magebit\StockQty\ViewModel\StockQty</argument>
+            </arguments>
+        </referenceBlock>
+
+        <referenceBlock name="product.info.upsell"
+                        template="Magento_Catalog::product/list/itemssimpletype.phtml">
+        </referenceBlock>
+
+        <referenceBlock name="catalog.product.related"
+                        template="Magento_Catalog::product/list/itemssimpletype.phtml">
+        </referenceBlock>
+
+
+        <referenceBlock name="product.attributes" template="Magento_Catalog::product/view/attributessimpletype.phtml">
+            <arguments>
+                <argument name="view_model" xsi:type="object">\Magebit\AttributeAllowed\ViewModel\AttributeAllowed
+                </argument>
+            </arguments>
+        </referenceBlock>
+
+        <referenceBlock name="product.info.social" remove="true"/>
+        <referenceBlock name="product.info.type" remove="true"/>
+        <referenceBlock name="product.info.details" remove="true"/>
+
+
+        <move element="product.attributes" destination="product.info.main" after="product.info.price"/>
+        <move element="product.info.overview" destination="product.info.main" after="product.info.price"/>
+        <move element="product.info.upsell" destination="product.info.main" after="product.info.addtocart"/>
+        <move element="catalog.product.related" destination="content" after="product.info.media" />
     </body>
 </page>
