--- a/public/app/design/frontend/Magebit/learning/web/css/source/_extend.less
+++ b/public/app/design/frontend/Magebit/learning/web/css/source/_extend.less
@@ -17,3 +17,265 @@
 .navigation .level0 > .level-top {
   color: #fff;
 }
+
+.magebit-product-simple-view {
+  // Product view Add to Cart button styling
+  #product-addtocart-button {
+    background: #FF5501 0 0 no-repeat padding-box;
+    border-radius: 2px;
+    border: none;
+    opacity: 1;
+    width: 100%;
+    margin-top: 15px;
+  }
+
+  // Product view product title styling
+  .page-title-wrapper h1 {
+    font: normal normal 600 32px/43px Open Sans;
+    letter-spacing: 0;
+    color: #333333;
+    opacity: 1;
+  }
+
+  // Product view product sku number styling
+  .product-info-main .product-info-stock-sku {
+    text-align: left;
+    padding-left: 2%;
+    font: normal normal normal 14px/19px Open Sans;
+    letter-spacing: 0;
+    color: #575757;
+    opacity: 1;
+    vertical-align: middle;
+  }
+
+  .product-options-bottom .price-box .price-container .price, .product-info-price .price-box .price-container .price {
+    font: normal normal 600 32px/43px Open Sans;
+    letter-spacing: 0;
+    color: #575757;
+    opacity: 1;
+  }
+
+  // Product view removes border after price
+  .product-info-main .product-info-price {
+    border: none;
+  }
+
+  /*
+
+    Product view - product reviews summary style section
+
+   */
+
+  // Margin right for 5star rating
+  .product-info-main .rating-summary {
+    margin-right: 6.5px;
+  }
+
+  // Product view review link styling
+  .product-reviews-summary .reviews-actions a:first-child {
+    text-decoration: underline;
+    letter-spacing: 0;
+    color: #FF5501;
+    opacity: 1;
+    font: normal normal normal 12px/17px Open Sans;
+    margin-right: 20px;
+  }
+
+  // Product view Add Your Review link styling
+  .product-reviews-summary .reviews-actions a:nth-child(2) {
+    font: normal normal 600 12px/17px Open Sans;
+    letter-spacing: 0;
+    color: #333333;
+    opacity: 1;
+    padding: 6px 10px 5px 10px;
+    border: 1px solid #333333;
+    border-radius: 2px;
+  }
+
+  // Product view upsell product styling
+  .upsell-products p {
+    font: normal normal bold 16px/22px Open Sans;
+    letter-spacing: 0;
+    color: #333333;
+    opacity: 1;
+  }
+
+  /*
+
+      Product view product quantity selection field
+
+   */
+
+  // Product view substract button
+  .substract-item-quantity-button {
+    float: left;
+    height: 52px;
+    width: 52px;
+    background: #FFFFFF 0 0 no-repeat padding-box;
+    border: 1px solid #C2C2C2;
+    border-right: 0;
+    border-radius: 2px 0 0 2px;
+    opacity: 1;
+    font: normal normal bold 14px/19px Open Sans;
+  }
+
+  // Product view add product button
+  .add-item-quantity-button {
+    float: left;
+    height: 52px;
+    width: 52px;
+    background: #FFFFFF 0 0 no-repeat padding-box;
+    border: 1px solid #C2C2C2;
+    border-left: 0;
+    border-radius: 2px 0 0 2px;
+    opacity: 1;
+    color: #FF5501;
+    font: normal normal bold 14px/19px Open Sans;
+  }
+
+  .attribute-label {
+    font: normal normal bold 14px/19px Open Sans;
+    color: #333333;
+    letter-spacing: 0;
+  }
+
+  .product-info-main .product-info-price {
+    margin-bottom: 0;
+  }
+
+  .product-info-main .product.attribute.overview {
+    margin-top: 0;
+    padding-left: 20px;
+    background: #F9F9F9 0 0 no-repeat padding-box;
+  }
+
+  .product-attribute-list {
+    background: #F9F9F9 0 0 no-repeat padding-box;
+    padding-top: 20px;
+    ul > li {
+      padding-bottom: 1rem;
+      margin-bottom: 0;
+    }
+  }
+
+  ul, ol {
+    margin-bottom: 0;
+  }
+
+  .value p {
+    font: normal normal normal 12px/17px Open Sans;
+    letter-spacing: 0;
+    color: #333333;
+    opacity: 1;
+    padding-bottom: 21px;
+  }
+  /*
+  Remaining product stock styling section
+   */
+
+  .product-info-main .stock.available {
+    display: inline-block;
+    margin-left: 20px;
+    margin-top: 16.5px;
+    vertical-align: middle;
+  }
+
+  .product-info-main .product-add-form {
+    padding-top: 0;
+  }
+
+  .control {
+    float: left;
+  }
+
+  .box-tocart .input-text.qty {
+    height: 52px;
+    width: 86px;
+  }
+
+  .product-stock-quantity {
+    font: normal normal normal 14px/19px Open Sans;
+  }
+
+  /*
+
+  Related product/Upsell product styling section
+
+   */
+
+  // Product view related product styling
+  .related-products p {
+    font: normal normal 600 24px/33px Open Sans;
+    letter-spacing: 0;
+    color: #333333;
+    opacity: 1;
+  }
+
+  .product.name a {
+    text-align: left;
+    font: normal normal 600 16px/22px Open Sans;
+  }
+  .block.related .related-available .product-item-name {
+    margin-left: 0;
+  }
+  .product-item-info {
+    width: 90%;
+  }
+
+  .product-item .product-reviews-summary .reviews-actions {
+    display: inline;
+  }
+  #related-product-addtocart-button {
+    display: block;
+  }
+  .product-item-info:hover + #related-product-addtocart-button {
+    display: none;
+  }
+
+  .link-to-product {
+    font: normal normal 600 14px/19px Open Sans;
+    letter-spacing: 0;
+    color: #FFFFFF;
+    opacity: 1;
+    background: #333333 0 0 no-repeat padding-box;
+    border-radius: 2px;
+    padding: 6px 10px 5px 10px;
+  }
+
+  .block .title {
+    padding-bottom: 8px;
+    border-bottom: 1px solid #C2C2C2;
+    opacity: 1;
+  }
+
+  .products-upsell .product-item {
+    width: 100%;
+  }
+
+  .products-upsell .product-item-info {
+    width: 100%;
+    display: flex;
+  }
+
+  .products-related .product-items {
+    float: left;
+  }
+
+  .products-upsell .product-reviews-summary .reviews-actions a:nth-child(2) {
+    display: none;
+  }
+
+  .products-related .product-reviews-summary .reviews-actions a:nth-child(2) {
+    display: none;
+  }
+
+  .main .related {
+    display: inline-block;
+    margin-top: 80px;
+  }
+
+  .products {
+    margin-top: 0;
+  }
+
+}
