--- a/public/app/design/frontend/Magebit/learning/Magento_Catalog/templates/product/list/itemssimpletype.phtml
+++ b/public/app/design/frontend/Magebit/learning/Magento_Catalog/templates/product/list/itemssimpletype.phtml
@@ -9,7 +9,8 @@
 
 /* @var $block \Magento\Catalog\Block\Product\AbstractProduct */
 ?>
-
+<?php $addToCartButton = __('Add to Cart'); ?>
+<?php $viewProductButton = __('View Product'); ?>
 <?php
 switch ($type = $block->getType()) {
 
@@ -22,7 +23,7 @@ switch ($type = $block->getType()) {
             $title = __('Related Products');
             $items = $block->getAllItems();
             $limit = $block->getPositionLimit();
-            $shuffle = (int) $block->isShuffled();
+            $shuffle = (int)$block->isShuffled();
             $canItemsAddToCart = $block->canItemsAddToCart();
 
             $showAddTo = true;
@@ -41,7 +42,7 @@ switch ($type = $block->getType()) {
             $image = 'related_products_list';
             $title = __('Related Products');
             $items = $block->getItems();
-            $limit = 0;
+            $limit = 5;
             $shuffle = 0;
             $canItemsAddToCart = $block->canItemsAddToCart();
 
@@ -61,7 +62,7 @@ switch ($type = $block->getType()) {
             $title = __('We found other products you might like!');
             $items = $block->getAllItems();
             $limit = $block->getPositionLimit();
-            $shuffle = (int) $block->isShuffled();
+            $shuffle = (int)$block->isShuffled();
 
             $showAddTo = false;
             $showCart = false;
@@ -80,7 +81,7 @@ switch ($type = $block->getType()) {
             $image = 'upsell_products_list';
             $title = __('We found other products you might like!');
             $items = $block->getItemCollection()->getItems();
-            $limit = $block->getItemLimit('upsell');
+            $limit = 1;
             $shuffle = 0;
 
             $showAddTo = false;
@@ -152,105 +153,79 @@ switch ($type = $block->getType()) {
 }
 ?>
 
-<?php if ($exist) :?>
+<?php if ($exist) : ?>
 
-<?php if ($type == 'related' || $type == 'upsell') :?>
-<?php if ($type == 'related') :?>
-<div class="block <?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"relatedProducts":{"relatedCheckbox":".related.checkbox"}}' data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */ $shuffle ?>">
-    <?php else :?>
-    <div class="block <?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"upsellProducts":{}}' data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */ $shuffle ?>">
+<?php if ($type == 'related' || $type == 'upsell') : ?>
+<?php if ($type == 'related') : ?>
+<div class="block <?= $block->escapeHtmlAttr($class) ?>"
+     data-mage-init='{"relatedProducts":{"relatedCheckbox":".related.checkbox"}}'
+     data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */
+$shuffle ?>">
+    <?php else : ?>
+    <div class="block <?= $block->escapeHtmlAttr($class) ?>" data-mage-init='{"upsellProducts":{}}'
+         data-limit="<?= $block->escapeHtmlAttr($limit) ?>" data-shuffle="<?= /* @noEscape */
+    $shuffle ?>">
         <?php endif; ?>
-        <?php else :?>
+        <?php else : ?>
         <div class="block <?= $block->escapeHtmlAttr($class) ?>">
             <?php endif; ?>
             <div class="block-title title">
-                <strong id="block-<?= $block->escapeHtmlAttr($class) ?>-heading" role="heading" aria-level="2"><?= $block->escapeHtml($title) ?></strong>
+                <strong id="block-<?= $block->escapeHtmlAttr($class) ?>-heading" role="heading"
+                        aria-level="2"><?= $block->escapeHtml($title) ?></strong>
             </div>
             <div class="block-content content" aria-labelledby="block-<?= $block->escapeHtmlAttr($class) ?>-heading">
-                <?php if ($type == 'related' && $canItemsAddToCart) :?>
-                    <div class="block-actions">
-                        <?= $block->escapeHtml(__('Check items to add to the cart or')) ?>
-                        <button type="button" class="action select" role="button"><span><?= $block->escapeHtml(__('select all')) ?></span></button>
-                    </div>
-                <?php endif; ?>
+
                 <div class="products wrapper grid products-grid products-<?= $block->escapeHtmlAttr($type) ?>">
                     <ol class="products list items product-items">
-                        <?php foreach ($items as $_item) :?>
+                        <?php foreach ($items as $_item) : ?>
                             <?php $available = ''; ?>
-                            <?php if (!$_item->isComposite() && $_item->isSaleable() && $type == 'related') :?>
-                                <?php if (!$_item->getRequiredOptions()) :?>
+                            <?php if (!$_item->isComposite() && $_item->isSaleable() && $type == 'related') : ?>
+                                <?php if (!$_item->getRequiredOptions()) : ?>
                                     <?php $available = 'related-available'; ?>
                                 <?php endif; ?>
                             <?php endif; ?>
-                            <?php if ($type == 'related' || $type == 'upsell') :?>
+                            <?php if ($type == 'related' || $type == 'upsell') : ?>
                                 <li class="item product product-item" style="display: none;">
-                            <?php else :?>
+                            <?php else : ?>
                                 <li class="item product product-item">
                             <?php endif; ?>
-                            <div class="product-item-info <?= /* @noEscape */ $available ?>">
-                                <?= /* @noEscape */ '<!-- ' . $image . '-->' ?>
-                                <a href="<?= $block->escapeUrl($block->getProductUrl($_item)) ?>" class="product photo product-item-photo">
-                                    <?= $block->getImage($_item, $image)->toHtml() ?>
-                                </a>
+                            <div class="product-item-info <?= /* @noEscape */
+                            $available ?>">
+                                <?= /* @noEscape */'<!-- ' . $image . '-->' ?>
+                                <a href="<?= $block->escapeUrl($block->getProductUrl($_item)) ?>" class="product photo product-item-photo"><?= $block->getImage($_item, $image)->toHtml() ?></a>
                                 <div class="product details product-item-details">
-                                    <strong class="product name product-item-name"><a class="product-item-link" title="<?= $block->escapeHtml($_item->getName()) ?>" href="<?= $block->escapeUrl($block->getProductUrl($_item)) ?>">
-                                            <?= $block->escapeHtml($_item->getName()) ?></a>
-                                    </strong>
+                                    <strong class="product name product-item-name"><a class="product-item-link"
+                                                                                      title="<?= $block->escapeHtml($_item->getName()) ?>"
+                                                                                      href="<?= $block->escapeUrl($block->getProductUrl($_item)) ?>"><?= $block->escapeHtml($_item->getName()) ?></a></strong>
 
-                                    <?= /* @noEscape */ $block->getProductPrice($_item) ?>
+                                    <div class="related-upsell-products-review">
+                                        <?= $block->getReviewsSummaryHtml($_item, false, true) ?>
+                                    </div>
+                                    <?= /* @noEscape */$block->getProductPrice($_item) ?>
 
-                                    <?php if ($templateType) :?>
-                                        <?= $block->getReviewsSummaryHtml($_item, $templateType) ?>
+                                    <?php if ($type == 'upsell') : ?>
+                                        <a class="link-to-product"
+                                           href="<?= $block->escapeUrl($block->getProductUrl($_item)) ?>">View Product</a>
                                     <?php endif; ?>
 
-                                    <?php if ($canItemsAddToCart && !$_item->isComposite() && $_item->isSaleable() && $type == 'related') :?>
-                                        <?php if (!$_item->getRequiredOptions()) :?>
-                                            <div class="field choice related">
-                                                <input type="checkbox" class="checkbox related" id="related-checkbox<?= $block->escapeHtmlAttr($_item->getId()) ?>" name="related_products[]" value="<?= $block->escapeHtmlAttr($_item->getId()) ?>" />
-                                                <label class="label" for="related-checkbox<?= $block->escapeHtmlAttr($_item->getId()) ?>"><span><?= $block->escapeHtml(__('Add to Cart')) ?></span></label>
-                                            </div>
-                                        <?php endif; ?>
-                                    <?php endif; ?>
 
-                                    <?php if ($showAddTo || $showCart) :?>
-                                        <div class="product actions product-item-actions">
-                                            <?php if ($showCart) :?>
-                                                <div class="actions-primary">
-                                                    <?php if ($_item->isSaleable()) :?>
-                                                        <?php if ($_item->getTypeInstance()->hasRequiredOptions($_item)) :?>
-                                                            <button class="action tocart primary" data-mage-init='{"redirectUrl": {"url": "<?= $block->escapeUrl($block->getAddToCartUrl($_item)) ?>"}}' type="button" title="<?= $block->escapeHtmlAttr(__('Add to Cart')) ?>">
-                                                                <span><?= $block->escapeHtml(__('Add to Cart')) ?></span>
-                                                            </button>
-                                                        <?php else :?>
-                                                            <?php $postDataHelper = $this->helper(Magento\Framework\Data\Helper\PostHelper::class);
-                                                            $postData = $postDataHelper->getPostData($block->escapeUrl($block->getAddToCartUrl($_item)), ['product' => $_item->getEntityId()])
-                                                            ?>
-                                                            <button class="action tocart primary"
-                                                                    data-post='<?= /* @noEscape */ $postData ?>'
-                                                                    type="button" title="<?= $block->escapeHtmlAttr(__('Add to Cart')) ?>">
-                                                                <span><?= $block->escapeHtml(__('Add to Cart')) ?></span>
-                                                            </button>
-                                                        <?php endif; ?>
-                                                    <?php else :?>
-                                                        <?php if ($_item->getIsSalable()) :?>
-                                                            <div class="stock available"><span><?= $block->escapeHtml(__('In stock')) ?></span></div>
-                                                        <?php else :?>
-                                                            <div class="stock unavailable"><span><?= $block->escapeHtml(__('Out of stock')) ?></span></div>
-                                                        <?php endif; ?>
-                                                    <?php endif; ?>
-                                                </div>
-                                            <?php endif; ?>
-
-                                            <?php if ($showAddTo) :?>
-                                                <div class="secondary-addto-links actions-secondary" data-role="add-to-links">
-                                                    <?php if ($addToBlock = $block->getChildBlock('addto')) :?>
-                                                        <?= $addToBlock->setProduct($_item)->getChildHtml() ?>
-                                                    <?php endif; ?>
-                                                </div>
-                                            <?php endif; ?>
+                                    <?php if ($type == 'related') : ?>
+                                        <div class="actions">
+                                            <button type="submit"
+                                                    title="<?= $block->escapeHtmlAttr($addToCartButton) ?>"
+                                                    class="action primary tocart"
+                                                    id="related-product-addtocart-button">
+                                                <span><?= $block->escapeHtml($addToCartButton) ?></span>
+                                            </button>
+                                            <?= $block->getChildHtml('', true) ?>
                                         </div>
                                     <?php endif; ?>
+
+                                    <?php if ($templateType) : ?>
+                                        <?= $block->getReviewsSummaryHtml($_item, $templateType) ?>
+                                    <?php endif; ?>
                                 </div>
+
                             </div>
                             </li>
                         <?php endforeach ?>
@@ -258,4 +233,4 @@ switch ($type = $block->getType()) {
                 </div>
             </div>
         </div>
-        <?php endif;?>
+        <?php endif; ?>
