--- a/public/app/design/frontend/Magebit/learning/Magento_Catalog/templates/product/view/attributessimpletype.phtml
+++ b/public/app/design/frontend/Magebit/learning/Magento_Catalog/templates/product/view/attributessimpletype.phtml
@@ -13,21 +13,21 @@
  */
 ?>
 <?php
-    $_helper = $this->helper(Magento\Catalog\Helper\Output::class);
-    $_product = $block->getProduct();
+$_helper = $this->helper(Magento\Catalog\Helper\Output::class);
+$_product = $block->getProduct();
+$allowedAttribute = $block->getData("view_model");
 ?>
-<?php if ($_additional = $block->getAdditionalData()) :?>
-    <div class="additional-attributes-wrapper table-wrapper">
-        <table class="data table additional-attributes" id="product-attribute-specs-table">
-            <caption class="table-caption"><?= $block->escapeHtml(__('More Information')) ?></caption>
-            <tbody>
-            <?php foreach ($_additional as $_data) :?>
-                <tr>
-                    <th class="col label" scope="row"><?= $block->escapeHtml($_data['label']) ?></th>
-                    <td class="col data" data-th="<?= $block->escapeHtmlAttr($_data['label']) ?>"><?= /* @noEscape */ $_helper->productAttribute($_product, $_data['value'], $_data['code']) ?></td>
-                </tr>
+<?php if ($_additional = $block->getAdditionalData()) : ?>
+    <div class="product-attribute-list">
+        <ul>
+            <?php foreach ($_additional as $_data) : ?>
+                <?php if ($allowedAttribute->isAllowed($_data['code'])) : ?>
+                    <li><span class="attribute-label"><?= $block->escapeHtml($_data['label']) ?>: </span><span><?= /* @noEscape */
+                            $_helper->productAttribute($_product, $_data['value'], $_data['code']) ?></span></li>
+                <?php endif; ?>
+
             <?php endforeach; ?>
-            </tbody>
-        </table>
+        </ul>
     </div>
-<?php endif;?>
+
+<?php endif; ?>
